--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.34.3",
     "lucide-react": "^0.575.0",
-    "next": "15.0.0",
+    "next": "^16.1.6",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "tailwind-merge": "^3.5.0"
